--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,10 @@ dev = {file = ['requirements_dev.txt']}
 
 [tool.ruff]
 line-length = 120
+lint.select = ["I"]
 
-[tool.ruff.lint]
-select = ["I", "N", "E", "W", ]
+#[tool.ruff.lint]
+#select = ["I", "N", "E", "W", ]
 
 [tool.coverage.run]
 omit = ["tests/*"]
