--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,51 @@
-torch==2.6.0
-typer==0.15.2
-fastapi==0.115.12
-uvicorn==0.34.2
-scikit-learn
-matplotlib
-numpy
+anyio==4.9.0
+beautifulsoup4==4.14.3
+bentoml==1.4.32
+dropbox==12.0.2
+evidently==0.7.20
+firebase_admin==7.1.0
+functions_framework==3.10.0
+hydra-core==1.3.2
+invoke==2.2.1
+joblib==1.5.1
+locustio==0.999
+logfire==4.17.0
+loguru==0.7.3
+Markdown==3.10
+markdown2==2.5.4
+matplotlib==3.10.8
+my_project==0.2dev
+my_project_name==0.0.0
+nltk==3.9.2
+numpy==2.4.1
+omegaconf==2.3.0
+onnx==1.20.1
+onnxruntime==1.23.2
+openai==2.15.0
+optuna==4.3.0
+pandas==2.3.3
+pdfkit==1.0.0
+Pillow==12.1.0
+playwright==1.57.0
+prometheus_client==0.23.1
+protobuf==6.33.3
+pydantic==2.12.5
+pydantic_ai==1.41.0
+PyPDF2==3.0.1
+pytest==9.0.2
+python-dotenv==1.2.1
+pytorch_lightning==2.6.0
+Requests==2.32.5
+scikit_learn==1.8.0
+scipy==1.17.0
+seaborn==0.13.2
+setuptools==75.8.0
+streamlit==1.52.2
+tg.devtools==2.5.0
+torch==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+transformers==4.36.0
+typer==0.21.1
+wandb==0.23.1
+wordcloud==1.9.5
